maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: not found: value x
		if (x==0) {
                    ^RandomMouseMaze:9: error: not found: value x
		if (x==1) {
                    ^RandomMouseMaze:12: error: not found: value x
		if (x==2 && !estFaceMur) {
                    ^